# rusty-kitten-tts

./: .gitignore  Cargo.toml  README.md  build.rs  get_model.sh
.github/workflows/: release.yml  rust.yml
src/: espeak_native.rs  main.rs  model.rs  npz.rs  phonemize.rs  preprocess.rs
