[package]
name = "kittentts-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
hound = "3.5"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "download-binaries", "tls-rustls"] }
regex = "1.11"
unicode-normalization = "0.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
fancy-regex = "0.14"
